--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -11,5 +11,8 @@
     "rules": {
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/strict-boolean-expressions": "off"
-    }
+    },
+    "ignorePatterns": [
+        "vite-env.d.ts"
+    ]
 }
